# realtor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  my.patch  pyproject.toml  pytest.ini
.github/workflows/: build-image.yaml  main.yml  run-test.yaml
data/postgres/: postmaster.pid
data/postgres/global/: 1260  2671  2672  2676  pg_control
realtor 복사본/: manage.py
realtor 복사본/properties/: views.py
realtor 복사본/realtor/: asgi.py  serializers.py  urls.py  views.py  wsgi.py
realtor 복사본/transactions/: urls.py
realtor 복사본/users/: models.py  urls.py
realtor/authentication/: serializers.py  urls.py  views.py
realtor/properties/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
realtor/properties/migrations/: 0001_initial.py  0002_auto_20230326_0753.py  0002_initial.py  0002_property_agents.py  0003_alter_property_detailed_type.py  0003_property_user.py
realtor/realtor/: settings.py  urls.py
realtor/test/: test_authentication.py  test_users.py
realtor/test/user_tests/: conftest.py  test_users.py
realtor/tests/agent_tests/: test_agent.py
realtor/tests/auth_tests/: conftest.py  test_authentication.py
realtor/tests/property_tests/: conftest.py  test_property.py
realtor/tests/transaction_tests/: test_transactions.py
realtor/tests/user_tests/: conftest.py  test_users.py
realtor/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
realtor/transactions/migrations/: 0001_initial.py  0002_auto_20230330_1027.py  0002_initial.py
realtor/users/: admin.py  models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
